syntax = "proto3";

option go_package = "achuala.in/ledger/glaccount;glaccount";

message JournalEntry {
    string id = 1;
    string transactionId = 2;
    string externalRef = 3;
    string entryDate = 4;
    string accountId = 5;
    string notes = 6;
    double amount = 7;
    string type = 8;
    string reversalId = 9;
    bool manualEntry = 10;
    string signature = 11;    
    map<string, string> tags = 12; 
}

message PostJournalEntryRq {
    repeated JournalEntry entries = 1;
}

message PostJournalEntryRs {
    string status = 1;
}
